--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-### Custom ###
-files/*
-main_test.py
-
 # Created by https://www.gitignore.io/api/venv,python,pycharm+all
 
 ### PyCharm+all ###
@@ -194,3 +190,6 @@ pip-selfcheck.json
 
 
 # End of https://www.gitignore.io/api/venv,python,pycharm+all
+
+# Custom
+!example_binaries/*.so
