--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-unicorn==1.0.1
-pyelftools==0.24
+unicorn==1.0.2rc4
+pyelftools==0.26
 hexdump==3.3
-keystone-engine==0.9.1.post3
+keystone-engine==0.9.2
