--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,16 @@
 [bdist_wheel]
 universal=1
+
+[tox:tox]
+envlist = py{37,38,39}-{linux,macos,windows}
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+
+[testenv]
+deps = pytest
+commands =
+    pytest
