--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         pip install setuptools
     - name: Build
       run: |
-        python .\setup.py sdist
+        python setup.py sdist
     - uses: actions/upload-artifact@v2
       with:
          path: ${{ github.workspace }}/dist/*
