--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,23 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install setuptools
         pip install tox tox-gh-actions
-    - name: Test
+    - name: Install to system
+      run: |
+        python setup.py install
+    - name: Run tox for Test
       run: |
         tox
+    - name: Run example*.py for test
+      shell: bash
+      run: |
+        cd examples
+        for file in $(ls example*.py); do
+            echo "::group::Run $file"
+            python3 "$file"
+            echo "::endgroup::"
+        done
 
   build:
     needs: [test]
