--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,27 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install setuptools
         pip install tox tox-gh-actions
-    - name: Test
+    - name: Install to system
+      run: |
+        python setup.py install
+    - name: Run tox for Test
       run: |
         tox
+    - name: Run example*.py for test
+      shell: bash
+      run: |
+        cd examples
+        for file in $(ls example*.py); do
+            echo "::group::Run $file"
+            python3 "$file"
+            echo "::endgroup::"
+        done
 
   build:
     needs: [test]
