Enable macos runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ ubuntu-latest, windows-latest ]
+        platform: [ ubuntu-latest, windows-latest, macos-latest ]
         python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11' ]
+        # macos-latest is ARM-based and python 3.7 is not present
+        exclude:
+          - platform: macos-latest
+            python-version: 3.7
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
