- Bump unicorn lib to 2.1.2 - Expand pytest suite with python 3.12 and 3.13 - Expand workflow matrix with python 3.12 and 3.13

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,16 @@ jobs:
       fail-fast: false
       matrix:
         platform: [ ubuntu-latest, windows-latest, macos-latest ]
-        python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11' ]
-        # macos-latest is ARM-based and python 3.7 is not present
+        python-version: [ '3.7', '3.8', '3.9', '3.10', '3.11', '3.12', '3.13' ]
         exclude:
+          # macos-latest is ARM-based and python 3.7 is not present
           - platform: macos-latest
+            python-version: 3.7
+          # python 3.7 is not present on ubuntu 24.04
+          - platform: ubuntu-latest
+            python-version: 3.7
+        include:
+          - platform: ubuntu-22.04
             python-version: 3.7
     steps:
       - uses: actions/checkout@v4
