--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "androidemu"
 version = "0.0.3"
-requires-python = ">=3.7, <3.12"
+requires-python = ">=3.7"
 authors = [
     { name = "AeonLucid", email = "aeonlucid@gmail.com" },
 ]
@@ -22,9 +22,11 @@ classifiers = [
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
 ]
 dependencies = [
-    "unicorn==2.1.0",
+    "unicorn==2.1.2",
     "pyelftools==0.31",
     "hexdump==3.3",
     "keystone-engine==0.9.2"
